WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292745
Lexer errors should be cleared before parsing class default initialization expressions
https://bugs.webkit.org/show_bug.cgi?id=292745
Summary
Lexer errors should be cleared before parsing class default initialization ex...
daniel_liu4
Reported
2025-05-08 16:10:04 PDT
rdar://149546540
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-05-08 16:14:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45132
daniel_liu4
Comment 2
2025-05-09 10:06:10 PDT
***
Bug 291746
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2025-05-09 11:02:22 PDT
Committed
294718@main
(c7e3a19ed52a): <
https://commits.webkit.org/294718@main
> Reviewed commits have been landed. Closing PR #45132 and removing active labels.
Yusuke Suzuki
Comment 4
2025-05-23 14:28:27 PDT
***
Bug 283795
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug